# config-service

./: GETTING_STARTED.md  INTEGRATION_GUIDE.md  JOURNAL.md
.clinerules/: memory.md
Course/Module1/examples/config-service/: Makefile
Course/Module1/examples/config-service/.clinerules/: coding.md
Course/Module1/examples/config-service/svc/: .env.example  docker-compose.yml  pyproject.toml
Course/Module1/examples/config-service/svc/api/: endpoints.py  repository.py  settings.py
Course/Module1/examples/config-service/ui/: package-lock.json  package.json
Course/Module1/project/: PART_2.md
Course/Module2/examples/config-service/: Makefile
Course/Module2/examples/config-service/.clinerules/: memory.md
Course/Module2/examples/config-service/memory/: TECHNICAL.md
Course/Module2/examples/config-service/svc/: docker-compose.yml  pyproject.toml
Course/Module2/examples/config-service/ui/: package-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
Course/Module2/project/: INSTRUCTIONS.md
Course/Module3/examples/config-service/: .gitignore  Makefile
Course/Module3/examples/config-service/.claude/: settings.local.json
Course/Module3/examples/config-service/changes/: 001-capacity-monitoring.md
Course/Module3/project/: INSTRUCTIONS.md  INTEGRATE.md
Course/Module4/example/config-service/: .mcp.json  AGENTS.md  CLAUDE.md  DEMO.md  Makefile  README.md
Course/Module4/project/: INSTRUCTIONS.md  INTEGRATE.md
config-service/: .env.example  .gitignore  CLIENT_LIBRARY.md  Makefile  README.md  ULID_FIX_SUMMARY.md  pyproject.toml  test_ulid_fix.py
config-service-client/: README.md  build.sh  package-lock.json  package.json  tsconfig.json
config-service-client/src/: client.ts  index.ts  types.ts
config-service/api/: __init__.py  config.py  config_test.py  database.py  database_test.py  main.py  main_test.py  models.py  models_test.py
config-service/api/routes/: applications.py  applications_test.py  configurations.py  configurations_test.py
config-service/memory/: ABOUT.md  ARCHITECTURE.md  DOMAIN.md  ENV_SCRIPTS.md  TECHNICAL.md  TESTING.md
config-service/migrations/: 001_initial_schema.sql  migrations.py  migrations_test.py
prompts/: 1-web-api-specs.md  2-web-api-prompt.md  3-web-api-plan.md  4-admin-ui-prompt.md  5-admin-ui-plan.md
ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: main.ts
ui/src/components/: ApplicationForm.ts  BaseComponent.ts  ConfigApp.ts  ConfigurationForm.ts  ConfigurationList.ts
ui/src/services/: api.ts
ui/src/types/: api.ts
(+88 files in other folders)
