[project]
name = "config-service"
version = "1.0.0"
description = "REST API Configuration Service"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0",
    "python-ulid>=2.0.0,<3.0.0",
    "pydantic-extra-types>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["api", "migrations"]
python_files = "*_test.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["api", "migrations"]
omit = ["*_test.py", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
